fix: add spacing for <p> tags

--- a/themes/basic/assets/css/main.css
+++ b/themes/basic/assets/css/main.css
@@ -248,6 +248,7 @@ nav a[aria-current]::before {
 
 p {
 	max-inline-size: var(--line-0);
+	margin-block-end: var(--space-s);
 }
 
 pre {
